--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "json for the CA 2",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
