--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.3",
     "http": "0.0.1-security",
+    "method-override": "^3.0.0",
     "mongoose": "^5.9.9",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.3",
